# physics-simulation

./: .gitignore  CMakeLists.txt
src/: buff0  collision.cpp  collision.hpp  dispatch.hpp  hash.cpp  hash.hpp  math.cpp  math.hpp  obj.cpp  obj.hpp  test.cpp  test_stab.cpp  test_torq.cpp  vector.hpp
tests/: test.cpp  test_stab.cpp  test_torq.cpp
